# AuGeoscienceDataSets

./: .gitignore  LICENSE  OWS Links  README.md  pyproject.toml  tox.ini
examples/: wamex_chichester_extract.py
examples/data/: a126037_mj_wasg4_surf2020a.txt  a126051_ta_wasl4_ass_rk2020f.txt  a126051_ta_wasl4_geo_2020f.txt
src/: download.py  downloaders.py
src/augeosciencedatasets/: read_dmp.py  readers.py
test/: test.py
