[tool.poetry]
name = "augeosciencedatasets"
version = "0.2.0"
description = "Code and Links to help in managing australian geoscicence datasets"
authors = ["BenFGA <97581359+BenFGA@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
